working on compileSummand() and prepareSummands() in DynamicParamsOdeTransitionSystem